change banner style

--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
     </nav>
   </header>
 
-    <div class = "banner">
-        
-        <img class = banner-image src="./assets/images/paintbanner.jpg" alt="">
-        <h1 class="head">subtitle</h1>
-        
+  <section class = "banner">
+
+    <div class = "avatar">
+    <img class ="pic" src="assets/images/bawp.jpg"  width="150" alt="" >
     </div>
+
+    <div class=" child2">
+    <h1>Bader Munir</h1>
+    </div>
+
+  </section>
 
     <main>
 
