links to apps placeholders

--- a/index.html
+++ b/index.html
@@ -79,6 +79,39 @@
 
   </section>
 
+  <section class="apps">
+
+    <div class="cards">
+      
+
+     <a href="/assets/webpages/main.html"><img class="pic2" src="assets/images/calc.jpg" alt=""></a>
+     <h3 class="text2">Calculater</h3>
+
+    </div>
+    <div class="cards">
+
+      <a href="/assets/webpages/main.html"><img class="pic2" src="assets/images/mac.jpg" alt=""></a>
+      <h3 class="text2">javascript</h3>
+
+    </div>
+
+    <div class="cards">
+
+      <a href="/assets/webpages/main.html"><img class="pic2" src="assets/images/weather.jpg" alt=""></a>
+      <h3 class="text2">Weather</h3>
+
+    </div>
+    <div class="cards">
+
+      <a href="/assets/webpages/main.html"><img class="pic2" src="assets/images/attack.jpg" alt=""></a>
+      <h3 class="text2">Django</h3>
+
+    </div>
+
+
+
+     </section>
+
     
 </body>
 </html>
