add footer with links

--- a/index.html
+++ b/index.html
@@ -108,10 +108,20 @@
 
     </div>
 
-
-
      </section>
 
-    
+     <footer id = "contact" class="footer">
+        <div class="footer-container">
+
+          <ul class="basic">
+            <li><a href="https://www.facebook.com/">Facebook</a></li>
+            <li><a href="https://www.instagram.com/?hl=en">Instagram</a></li>
+            <li><a href="https://twitter.com/?lang=en">Twitter</a></li>
+            <li><a href="https://github.com/?lang=en">Github</a></li>
+
+          </ul>
+        </div>
+      </footer>
+      
 </body>
 </html>
