--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class = "gall">
       
       
-      <a href="my-portfolio/assets/webpages/main.html"><img class="pic3" src="assets/images/blue.jpg" alt=""></a>
+      <a href="assets/webpages/main.html"><img class="pic3" src="assets/images/blue.jpg" alt=""></a>
       <h2 class = "text">Main App </h2>
   
     </div>
