--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Portfolio</title>
 </head>
 <body>
+ <!-- header section with nav links -->
 
    <header class="header">
     <nav class="nav-container">
@@ -32,6 +33,7 @@
 
     </nav>
   </header>
+        <!-- banner section with avatar -->
 
   <section class = "banner">
 
@@ -44,6 +46,8 @@
     </div>
 
   </section>
+
+ <!-- about me section -->
 
   <section id ="about" class = "container">
 
@@ -61,6 +65,7 @@
     </div>
 
   </section>
+     <!-- personal projects -->
 
   <section id ="work" class = "container">
 
@@ -78,6 +83,8 @@
     
 
   </section>
+
+   <!-- card gallery -->
 
   <section class="apps">
 
@@ -110,6 +117,8 @@
 
      </section>
 
+      <!-- contact footer section -->
+      
      <footer id = "contact" class="footer">
         <div class="footer-container">
 
