--- a/assets/webpages/resume.html
+++ b/assets/webpages/resume.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>placeholder image</h1> 
+   <h1>Resume</h1> 
 <img src="../images/digi.jpg" alt="">
 </body>
 </html>
