--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class = "gall">
       
       
-      <a href="https://mohamedisaaq0.github.io/group-project-1/index.html"><img class="pic3" src="assets/images/BookSearch2.jpg" alt=""></a>
+      <a href="./assets/webpages/project.html"><img class="pic3" src="assets/images/BookSearch2.jpg" alt=""></a>
       <h2 class = "text">Book Search project </h2>
   
     </div>
