add home link on project

--- a/assets/webpages/project.html
+++ b/assets/webpages/project.html
@@ -22,7 +22,7 @@
             </div>
     
             <div class="nav-link">
-              <a href="#contact">Home</a>
+              <a href="/index.html">Home</a>
             </div>
 
             </div>
