--- a/assets/webpages/dayplanner.html
+++ b/assets/webpages/dayplanner.html
@@ -39,7 +39,7 @@
           </section>
 
           <div>
-              <img src="/assets/images/searchscreen.png" alt="">
+              <img src="/assets/images/daily.png" alt="">
           </div>
 
     
