--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="cards">
       
 
-     <a href="assets/webpages/main.html"><img class="pic2" src="assets/images/calc.jpg" alt=""></a>
+     <a href="/assets/webpages/dayplanner.html"><img class="pic2" src="assets/images/calc.jpg" alt=""></a>
      <h3 class="text2">Day Planner</h3>
 
     </div>
