--- a/assets/webpages/project.html
+++ b/assets/webpages/project.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <title>project</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>projects</title>
 </head>
 <body>
     <header class="header">
@@ -39,7 +39,7 @@
           </section>
 
           <div>
-              <img src="/assets/images/searchscreen.png" alt="">
+              <img src="./assets/images/searchscreen.png" alt="">
           </div>
 
     
