--- a/assets/webpages/project.html
+++ b/assets/webpages/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>projects</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
           </section>
 
           <div>
-              <img src="/assets/images/booksearch.png" alt="">
+              <img src="../images/booksearch.png" alt="">
           </div>
 
     
