updated project 2 links

--- a/assets/webpages/resume.html
+++ b/assets/webpages/resume.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/cv.css">
     <title>Document</title>
 </head>
 <body>
-   <h1>Resume</h1>
+    <section class="header">
+   <h1>Bader Munir</h1>
+   <h3> Birmingham B11 4DE</h3>
+   <h4>email:bader.munir18@googlemail.com</h4><span>Github:</span>
+   </section>
+
+   <h1>Summary</h1>
+   <p>full stack developer  who loves </p>
+
+   <h1>techincal skills</h1>
+   <ul>
+    <li>html</li>
+    <li></li>
+   </ul>
+
+   <h1>projects</h1>
+   <h2>book search</h2>
+   <h2>project 2</h2>
+   <h2>project 3</h2>
+
+  <h1>experiance</h1>
+
+  <h1>education</h1>
+  <h2>bootcamp certificate</h2>
+  <h2>Bsc Software Design and Networks</h2>
+
 
    
-<img src="../images/digi.jpg" alt="">
+    
+
+
+<img src="" alt="">
 </body>
 </html>
